// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Bereitschaftseingaben - Schichtzusammensetzungen ohne Override berechnet Kombination nur-frueh stabil 1`] = `
[
  {
    "beginB": "2026-04-14 06:00",
    "endeB": "2026-04-14 07:00",
    "pauseB": 0,
  },
  {
    "beginB": "2026-04-14 15:45",
    "endeB": "2026-04-15 07:00",
    "pauseB": 30,
  },
  {
    "beginB": "2026-04-15 15:45",
    "endeB": "2026-04-15 17:00",
    "pauseB": 30,
  },
]
`;

exports[`Bereitschaftseingaben - Schichtzusammensetzungen ohne Override berechnet Kombination frueh-spaet stabil 1`] = `
[
  {
    "beginB": "2026-04-14 06:00",
    "endeB": "2026-04-14 07:00",
    "pauseB": 0,
  },
  {
    "beginB": "2026-04-14 22:00",
    "endeB": "2026-04-15 07:00",
    "pauseB": 30,
  },
]
`;

exports[`Bereitschaftseingaben - Schichtzusammensetzungen ohne Override berechnet Kombination frueh-nacht stabil 1`] = `
[
  {
    "beginB": "2026-04-14 06:00",
    "endeB": "2026-04-14 07:00",
    "pauseB": 0,
  },
  {
    "beginB": "2026-04-14 15:45",
    "endeB": "2026-04-14 19:45",
    "pauseB": 30,
  },
  {
    "beginB": "2026-04-15 06:15",
    "endeB": "2026-04-15 07:00",
    "pauseB": 45,
  },
  {
    "beginB": "2026-04-15 15:45",
    "endeB": "2026-04-15 17:00",
    "pauseB": 30,
  },
]
`;

exports[`Bereitschaftseingaben - Schichtzusammensetzungen ohne Override berechnet Kombination frueh-spaet-nacht stabil 1`] = `
[
  {
    "beginB": "2026-04-14 06:00",
    "endeB": "2026-04-14 07:00",
    "pauseB": 0,
  },
  {
    "beginB": "2026-04-14 22:00",
    "endeB": "2026-04-14 19:45",
    "pauseB": 30,
  },
  {
    "beginB": "2026-04-15 06:15",
    "endeB": "2026-04-15 07:00",
    "pauseB": 45,
  },
]
`;

exports[`Bereitschaftseingaben - Schichtzusammensetzungen ohne Override berechnet Kombination frueh-sonder stabil 1`] = `
[
  {
    "beginB": "2026-04-14 06:00",
    "endeB": "2026-04-14 20:15",
    "pauseB": 0,
  },
  {
    "beginB": "2026-04-15 07:00",
    "endeB": "2026-04-15 17:00",
    "pauseB": 20,
  },
]
`;

exports[`Bereitschaftseingaben - Schichtzusammensetzungen ohne Override berechnet Kombination frueh-spaet-sonder stabil 1`] = `
[
  {
    "beginB": "2026-04-14 06:00",
    "endeB": "2026-04-14 20:15",
    "pauseB": 0,
  },
  {
    "beginB": "2026-04-15 07:00",
    "endeB": "2026-04-15 17:00",
    "pauseB": 20,
  },
]
`;

exports[`Bereitschaftseingaben - Schichtzusammensetzungen ohne Override berechnet Kombination frueh-nacht-sonder stabil 1`] = `
[
  {
    "beginB": "2026-04-14 06:00",
    "endeB": "2026-04-14 19:45",
    "pauseB": 0,
  },
  {
    "beginB": "2026-04-15 06:15",
    "endeB": "2026-04-14 20:15",
    "pauseB": 45,
  },
  {
    "beginB": "2026-04-15 07:00",
    "endeB": "2026-04-15 17:00",
    "pauseB": 20,
  },
]
`;

exports[`Bereitschaftseingaben - Schichtzusammensetzungen ohne Override berechnet Kombination frueh-spaet-nacht-sonder stabil 1`] = `
[
  {
    "beginB": "2026-04-14 06:00",
    "endeB": "2026-04-14 19:45",
    "pauseB": 0,
  },
  {
    "beginB": "2026-04-15 06:15",
    "endeB": "2026-04-14 20:15",
    "pauseB": 45,
  },
  {
    "beginB": "2026-04-15 07:00",
    "endeB": "2026-04-15 17:00",
    "pauseB": 20,
  },
]
`;

exports[`Bereitschaftseingaben - verschiedene Overrides kombinierte Overrides fuer Frueh/ Spaet/ Nacht/ Sonder bleiben stabil 1`] = `
[
  {
    "beginB": "2026-04-14 06:00",
    "endeB": "2026-04-14 19:45",
    "pauseB": 0,
  },
  {
    "beginB": "2026-04-15 05:20",
    "endeB": "2026-04-14 20:45",
    "pauseB": 50,
  },
  {
    "beginB": "2026-04-15 07:30",
    "endeB": "2026-04-15 17:00",
    "pauseB": 15,
  },
]
`;
